--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@ __pycache__/
 *.exe
 *.out
 *.app
+
+# Large local artifacts (do not commit)
+golang/uPIMulator/docker/upmem-2023.2.0-Linux-x86_64.tar.gz
+python_cpp/uPIMulator_frontend/benchmark/TS/baselines/cpu/inputs/randomlist33M.txt
+python_cpp/uPIMulator_frontend/benchmark/TS/baselines/gpu/inputs/randomlist33M.txt
